--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body { 
-  background: url(./assets/images/img-03.jpg) no-repeat center center fixed; 
+  background: url(./assets/images/image.jpg) no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
