--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-.content-wrapper, footer { background-color: #A4D2A4; }
+main, footer { background-color: #A4D2A4; }
 
 .h5 a {
   text-decoration: none;
